# mobilecoin-intents

./: .gitignore  Cargo.toml  README.md  SECURITY_AUDIT.md  deny.toml
.github/workflows/: ci.yml  pages.yml
defuse-mobilecoin/: Cargo.toml
defuse-mobilecoin/src/: lib.rs
docs/: _config.yml  api.md  architecture.md  getting-started.md  index.md  security.md  solver-guide.md
examples/: complete-withdrawal.rs  demo-deposit.rs  demo-real-deposit.rs  generate-keys.rs  verify-signature.rs
examples/simple-solver/: .env.example  Cargo.toml  README.md
examples/simple-solver/src/: main.rs
mobilecoin-address/: Cargo.toml
mobilecoin-address/src/: error.rs  lib.rs  parsing.rs  serialization.rs  tests.rs  types.rs  validation.rs
mobilecoin-crypto/: Cargo.toml
mobilecoin-crypto/src/: error.rs  hash.rs  lib.rs  payload.rs  signature.rs  tests.rs  types.rs
mobilecoin-keys/: Cargo.toml
mobilecoin-keys/src/: derivation.rs  error.rs  lib.rs  near_intents.rs  ownership.rs  shared_secret.rs  tests.rs  types.rs
poa-mobilecoin/contracts/mob-bridge/: Cargo.toml
poa-mobilecoin/contracts/mob-bridge/src/: lib.rs
poa-mobilecoin/contracts/wmob-token/: Cargo.toml
poa-mobilecoin/contracts/wmob-token/src/: lib.rs
scripts/: DEPLOYMENT_PLAN.md  demo_intent_flow.sh  deploy_mainnet.sh  deploy_testnet.sh  generate_keys.sh  generate_wallet.rs
solver-mobilecoin/: Cargo.toml
solver-mobilecoin/src/: config.rs  error.rs  liquidity.rs  main.rs  price_feed.rs  quote.rs  settlement.rs  solver.rs
