[workspace]
resolver = "2"
members = [
    "mobilecoin-crypto",
    "mobilecoin-address",
    "mobilecoin-keys",
    "poa-mobilecoin/contracts/wmob-token",
    "poa-mobilecoin/contracts/mob-bridge",
    "defuse-mobilecoin",
    "solver-mobilecoin",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jayzalowitz/mobilecoin-intents"

[workspace.dependencies]
# Cryptography
ed25519-dalek = { version = "2.1", default-features = false }
curve25519-dalek = { version = "4.1", default-features = false, features = ["alloc", "digest", "serde", "zeroize", "precomputed-tables"] }
sha2 = { version = "0.10", default-features = false }
sha3 = "0.10"
rand_core = "0.6"
rand = "0.8"
zeroize = { version = "1.7", features = ["zeroize_derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = { version = "0.4", default-features = false, features = ["alloc"] }
bs58 = { version = "0.5", default-features = false, features = ["alloc"] }
borsh = "1.2"

# NEAR SDK
near-sdk = "5.5"

# Async
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures = "0.3"
async-trait = "0.1"

# HTTP
reqwest = { version = "0.11", features = ["json"] }

# Utilities
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
rust_decimal = "1.33"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
