[package]
name = "defuse-mobilecoin"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NEAR Intents verifier contract updates for MobileCoin support"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk.workspace = true
serde.workspace = true
hex.workspace = true
mobilecoin-crypto = { path = "../mobilecoin-crypto" }
mobilecoin-address = { path = "../mobilecoin-address" }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
