[package]
name = "defuse-mobilecoin"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NEAR Intents verifier contract updates for MobileCoin support"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk.workspace = true
borsh.workspace = true
hex = { workspace = true, default-features = false, features = ["alloc"] }
mobilecoin-crypto = { path = "../mobilecoin-crypto", default-features = false }
mobilecoin-address = { path = "../mobilecoin-address", default-features = false }

[dev-dependencies]
near-sdk = { workspace = true, features = ["unit-testing"] }
