[package]
name = "mobilecoin-address"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MobileCoin address parsing and validation for NEAR Intents"

[features]
default = ["std"]
std = []

[dependencies]
curve25519-dalek = { workspace = true, default-features = false }
bs58 = { workspace = true, default-features = false, features = ["alloc"] }
sha2 = { workspace = true, default-features = false }
serde.workspace = true
hex = { workspace = true, default-features = false, features = ["alloc"] }
thiserror.workspace = true

[dev-dependencies]
rand.workspace = true
