[package]
name = "mobilecoin-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Ed25519 cryptographic primitives for MobileCoin integration with NEAR Intents"

[dependencies]
ed25519-dalek.workspace = true
sha2.workspace = true
rand_core.workspace = true
rand.workspace = true
serde.workspace = true
hex.workspace = true
thiserror.workspace = true

[dev-dependencies]
rand.workspace = true
serde_json.workspace = true
