[package]
name = "mobilecoin-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Ed25519 cryptographic primitives for MobileCoin integration with NEAR Intents"

[features]
default = ["std"]
std = ["rand", "rand_core", "ed25519-dalek/rand_core"]

[dependencies]
ed25519-dalek = { workspace = true, default-features = false }
sha2 = { workspace = true, default-features = false }
rand_core = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
serde.workspace = true
hex = { workspace = true, default-features = false, features = ["alloc"] }
thiserror.workspace = true

[dev-dependencies]
rand.workspace = true
serde_json.workspace = true
chrono = "0.4"
bs58.workspace = true

[[example]]
name = "generate-keys"
path = "../examples/generate-keys.rs"

[[example]]
name = "demo-deposit"
path = "../examples/demo-deposit.rs"

[[example]]
name = "demo-real-deposit"
path = "../examples/demo-real-deposit.rs"

[[example]]
name = "verify-signature"
path = "../examples/verify-signature.rs"

[[example]]
name = "complete-withdrawal"
path = "../examples/complete-withdrawal.rs"
