[package]
name = "mobilecoin-keys"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "One-time key derivation for MobileCoin stealth addresses"

[dependencies]
curve25519-dalek.workspace = true
sha2.workspace = true
sha3.workspace = true
rand_core.workspace = true
rand.workspace = true
serde.workspace = true
hex.workspace = true
thiserror.workspace = true
zeroize.workspace = true
mobilecoin-address = { path = "../mobilecoin-address" }

[dev-dependencies]
rand.workspace = true
