[package]
name = "simple-mob-solver"
version = "0.1.0"
edition = "2021"
description = "A simple example MobileCoin solver for NEAR Intents"
license = "Apache-2.0"

# This is a standalone example - not part of the parent workspace
# To run: cd examples/simple-solver && cargo run

# Empty workspace table makes this package standalone
[workspace]

[[bin]]
name = "simple-solver"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# WebSocket client for solver bus
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Decimal math for price calculations
rust_decimal = "1.33"

# Logging
log = "0.4"
env_logger = "0.10"

# Error handling
thiserror = "1.0"

# Time handling
chrono = "0.4"
