[package]
name = "wmob-token"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Wrapped MobileCoin (wMOB) NEP-141 fungible token contract"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk.workspace = true
borsh.workspace = true
serde.workspace = true

[dev-dependencies]
near-sdk = { workspace = true, features = ["unit-testing"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
